SDK, more reliable injest, file structure cleanup, more...
